# openlqm

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
OpenLQM/: CMakeLists.txt  clarity.cpp  img_util.cpp  main.cpp  minutia.cpp  openlqm.cpp
OpenLQM/include/openlqm/: openlqm.hpp.in  openlqm_minutia.hpp
OpenLQM/openlqm_cmake_utils/: init.cmake
